# vibe-3d

./: CMakeLists.txt  README.md  ROADMAP.md  imgui.ini  vibe3d_settings.cfg
shaders/: standard.frag  standard.vert
src/: main.cpp
